# football

./: .gitignore  CMakeLists.txt  constants.hpp  football.cpp  football.sln  football.vcxproj  football.vcxproj.filters  globals.cpp  globals.hpp  main.cpp  radar.cpp  season.hpp
classes/: CMakeLists.txt  championship.hpp  club.hpp  club_season.hpp  game.hpp  goal.hpp  manager.hpp  player.hpp  referee.hpp  score.hpp  season.hpp  stadium.hpp  team.hpp
db/: CMakeLists.txt  football.sql  mysql.cpp  mysql.hpp
football-test/: client_server.cpp  football-test.vcxproj  football.cpp  football_server.cpp  objects.cpp  pch.h  radar.cpp  test.cpp
net/: CMakeLists.txt  client.hpp  common.hpp  connection.hpp  event.hpp  event_action.cpp  event_action.hpp  football_client.hpp  football_server.hpp  message.hpp  server.hpp  tsqueue.hpp
plog/: CMakeLists.txt  Init.h  Logger.h  Record.h
plog/Appenders/: ConsoleAppender.h  DebugOutputAppender.h  EventLogAppender.h  IAppender.h  RollingFileAppender.h
plog/Converters/: UTF8Converter.h
plog/Formatters/: CsvFormatter.h  TxtFormatter.h
plog/Initializers/: RollingFileInitializer.h
pub/: CMakeLists.txt  gazeta_esportiva.hpp  publisher_base.hpp  runner.cpp  runner.hpp
radar-test/: pch.cpp  pch.h  radar.cpp
scanner/: CMakeLists.txt  scheduler.hpp  task_base.hpp  task_new_championship.hpp  task_result.hpp
util/: CMakeLists.txt  globals.cpp  globals.hpp  json.hpp  toml.hpp  util.cpp  util.hpp
